# Column-Store

./: .gitignore  CMakeLists.txt  Doxyfile  _aggregator_query_8h.html  _aggregator_query_8h__dep__incl.map  _aggregator_query_8h__dep__incl.md5  _aggregator_query_8h__incl.map  _aggregator_query_8h__incl.md5  _aggregator_query_8h_source.html  _c_make_lists_8txt.html  _c_s_v_data_generator_8cpp.html  _c_s_v_data_generator_8cpp__incl.map  _c_s_v_data_generator_8cpp__incl.md5  _c_s_v_data_generator_8cpp_a6474a77d936ca3cb982c93d28384fdba_icgraph.map  _c_s_v_data_generator_8cpp_a6474a77d936ca3cb982c93d28384fdba_icgraph.md5  _c_s_v_data_generator_8h.html  _c_s_v_data_generator_8h__dep__incl.map  _c_s_v_data_generator_8h__dep__incl.md5  _c_s_v_data_generator_8h__incl.map  _c_s_v_data_generator_8h__incl.md5  _c_s_v_data_generator_8h_source.html  _c_s_vparser_8cpp.html  _c_s_vparser_8cpp__incl.map  _c_s_vparser_8cpp__incl.md5  _col_store_data_generator_8h.html  _col_store_data_generator_8h__dep__incl.map  _col_store_data_generator_8h__dep__incl.md5  _col_store_data_generator_8h__incl.map  _col_store_data_generator_8h__incl.md5  _col_store_data_generator_8h_source.html  _column_8h.html  _column_8h_source.html  _column_store_updater_8cpp.html  _column_store_updater_8cpp__incl.map  _column_store_updater_8cpp__incl.md5  _column_store_updater_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  _column_store_updater_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _column_store_updater_8cpp_a249120153b5b05aa5ab079bfafeb3da5_icgraph.map  _column_store_updater_8cpp_a249120153b5b05aa5ab079bfafeb3da5_icgraph.md5  _complete_8h.html  (+1054 more)
.github/workflows/: main.yml
data/: dummy_data.sql  grades.csv  sample.csv  student_data.xlsx  students.csv
interfaces/: CSVDataGenerator.h  Column.h  DataGeneratorInterface.h  DataRecord.h  GenericQueryBuilder.h  PostgreSQLMetaData.cpp  PostgreSQLMetaData.h
interfaces/ConditionsInterfaces/: ConditionInterface.h
parser/: DataLoader.h  JoinIndex.h  Projection.cpp  Projection.h  SchemaExtractor.cpp  SchemaExtractor.h  SchemaLoader.cpp  SchemaLoader.h  SchemaMetaData.cpp  SchemaMetaData.h  Table.cpp  Table.h  a.out  create_dummy_data.cpp  make_db.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+70 more)
src/: Complete.h
src/CSVDataGenerator/: CMakeLists.txt  CSVDataGenerator.cpp  CSVDataGenerator.h
src/ColStoreDataGenerator/: ColStoreDataGenerator.h
src/ColumnStoreInitializer/: CMakeLists.txt  Driver.cpp  StoreInitializer.h
src/Core/: ColumnStoreUpdater.cpp  ProjectionData.h  ProjectionDataTest.cpp
src/Fort/: CMakeLists.txt
src/GenericQuery/: CMakeLists.txt  GenericGenerator.cpp  GenericGenerator.h  GenericQueryBuilder.cpp  GenericQueryBuilder.h  GroupByManager.cpp  GroupByManager.h
src/Parser/: CMakeLists.txt  Column.h  DataLoader.cpp  DataLoader.h  ForeignKey.h  JoinIndex.h  Projection.cpp  Projection.h  SchemaExtractor.cpp  SchemaExtractor.h  SchemaLoader.cpp  SchemaLoader.h  SchemaLoaderTester.cpp  SchemaMetaData.cpp  SchemaMetaData.h  Table.cpp  Table.h  create_dummy_data.cpp
src/PostgresDataGenerator/: CMakeLists.txt  PostgreSQLDataGenerator.h  PostgreSQLDataGeneratorTest.cpp  PostgreSQLMetaData.cpp  PostgreSQLMetaData.h
src/interfaces/: AggregatorQuery.h  CMakeLists.txt  CSVDataGenerator.h  Column.h  ConditionQuery.h  DataGeneratorInterface.cpp  DataGeneratorInterface.h  DataRecord.h  GenericQueryBuilder.h  PostgreSQLDataGenerator.h  Validators.h
